Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- The document navigation popup widget now displays a list of available
  document trees on top, enabling you to browse to documents. Both in the
  workspaces and sections.
Bug fixes:
~~~~~~~~~~
-
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
- Calling the Document Navigation method "getCalendarNavigation" didn't
  make any sense, and is a leftover since this was a part of the calendar.
  It is now called "getDocumentNavigation".